--- a/assets/sass/colors/_functional.scss
+++ b/assets/sass/colors/_functional.scss
@@ -3,7 +3,8 @@
 // Change these with extreme caution, especially noting the contrast
 // ratios noted.
 
-$aplus-success:         #00803c; // There should be a contrast ratio above 4.5 between this and white.
-$aplus-info:            #1d7792; // This is a darkened version of the bootstrap 3 default. Contrast must be >=4.5 with white.
-$aplus-warning:         #a6670e; // This is a darkened version of the bootstrap 3 default. Contrast must be >=4.5 with white.
-$aplus-danger:          #A50000; // There should be a contrast ratio above 7 between this and white.
+$aplus-success: #00803c; // There should be a contrast ratio above 4.5 between this and white.
+$aplus-info: #1d7792; // This is a darkened version of the bootstrap 3 default. Contrast must be >=4.5 with white.
+$aplus-warning: #a6670e; // This is a darkened version of the bootstrap 3 default. Contrast must be >=4.5 with white.
+$aplus-danger: #a50000; // There should be a contrast ratio above 7 between this and white.
+$aplus-focus: #ffdd00; // This should be clearly different fron those defned above and the brand colours.
