--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -1,9 +1,13 @@
+@import '../mixins/focus';
+
 $extra-small-height: 16px;
 $small-height: 18px;
 $medium-height: 20px;
 $large-height: 24px;
 
 @mixin button-basics {
+	@include focus-with-background-and-color;
+
 	display: inline-block;
 	text-align: center;
 	white-space: nowrap;
