--- a/assets/sass/components/_frontpage-cards.scss
+++ b/assets/sass/components/_frontpage-cards.scss
@@ -1,3 +1,5 @@
+@import '../mixins/focus';
+
 .frontpage {
 	&.frontpage-section {
 		margin: 1%;
@@ -17,6 +19,10 @@
 				font-size: 18px;
 				margin-top: 20px;
 				margin-bottom: 10px;
+
+				a {
+					@include focus-with-background-and-color;
+				}
 			}
 		}
 	}
@@ -53,6 +59,11 @@
 
 		@media (max-width: 669px) {
 			width: 100%;
+		}
+
+		a {
+			display: block;
+			@include focus-with-outline-only;
 		}
 	}
 	.advert-card {
