--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -35,5 +35,6 @@ $brand-danger: $aplus-danger;
  */
 @import 'components/button';
 @import 'components/error_summary';
+@import 'components/focus';
 @import 'components/frontpage-cards';
 @import 'protocols/quiz1';
