Remove questionnaire feedback modal
On submission, questionnaires used to present a modal
with feedback on the progress of submission. And upon
acceptance or rejection the points badge and
the status of submission.

This removes that modal, and adds an overlay on top of the
the exercise to be displayed while the exercise is being posted.

Once the exercise is posted, or alternatively there is an error
in the submission, the overlay is removed and error message or
the graded form is being presented.

--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -297,6 +297,15 @@ html, body {
 .progress {
     position: relative;
 }
+/* TODO: Move defining the stickiness to a single
+file for all the components */
+.sticky-progress {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    overflow: hidden;
+    z-index: 100;
+}
 .progress .required-points {
     position: absolute;
     height: 20px;
@@ -400,26 +409,4 @@ td.submissions-dropdown {
 
 table.results-table .category-row {
     font-weight: bold;
-}
-
-/* overlays */
-.overlay-parent {
-    position: relative;
-    padding-bottom: 15px; /* Same as .form-group margin-bottom */
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 15;
-    background-color: #000b;
-}
-
-.overlay .panel {
-    margin: auto;
-    margin-top: 4rem;
-    width: 80%;
 }
