--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -146,6 +146,7 @@
                     {% endif %}
                 >
                     {% include "_messages.html" %}
+                    {% include "exercise/_submit_progress.html" %}
                     <div>
                         {% if page.content.strip %}
                             {{ page.content|safe }}
