--- a/course/templates/course/staff/_tag_remove_modal.html
+++ b/course/templates/course/staff/_tag_remove_modal.html
@@ -32,14 +32,14 @@
             <div class="modal-footer">
                 <button
                     type="button"
-                    class="btn btn-default"
+                    class="aplus-button--secondary aplus-button--md"
                     data-dismiss="modal"
                 >
                     {% trans "Cancel" %}
                 </button>
                 <button
                     type="button"
-                    class="btn btn-danger"
+                    class="aplus-button--danger aplus-button--md"
                     data-dismiss="modal"
                     id="tag-remove-modal-button"
                 >
