--- a/course/templates/course/staff/group_delete.html
+++ b/course/templates/course/staff/group_delete.html
@@ -37,8 +37,8 @@
     </table>
 
     <div class="form-group">
-  		<input class="btn btn-danger" type="submit" value="{% trans 'Remove' %}" />
-  		<a class="btn btn-default" href="{{ instance|url:'groups-list' }}">
+  		<input class="aplus-button--danger aplus-button--md" type="submit" value="{% trans 'Remove' %}" />
+  		<a class="aplus-button--secondary aplus-button--md" role="button" href="{{ instance|url:'groups-list' }}">
   			{% trans "Cancel" %}
   		</a>
   	</div>
