--- a/course/templates/course/staff/groups.html
+++ b/course/templates/course/staff/groups.html
@@ -15,7 +15,7 @@
 
   <p>
     {% trans "Number of groups" %} <strong>{{ groups|length }}</strong>
-    <a class="btn btn-default btn-xs" href="{{ instance|url:'groups-add' }}">
+    <a class="aplus-button--secondary aplus-button--xs" role="button" href="{{ instance|url:'groups-add' }}">
       <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
       {% trans "Add new" %}
     </a>
@@ -37,11 +37,11 @@
         <td>{% profiles group.members.all instance is_teacher %}</td>
         <td>{{ group.timestamp }}</td>
         <td>
-          <a class="btn btn-default btn-xs" href="{% url 'groups-edit' course_slug=course.url instance_slug=instance.url group_id=group.id %}">
+          <a class="aplus-button--secondary aplus-button--xs" role="button" href="{% url 'groups-edit' course_slug=course.url instance_slug=instance.url group_id=group.id %}">
             <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
             {% trans "Edit" %}
           </a>
-          <a class="btn btn-default btn-xs" href="{% url 'groups-delete' course_slug=course.url instance_slug=instance.url group_id=group.id %}">
+          <a class="aplus-button--secondary aplus-button--xs" role="button" href="{% url 'groups-delete' course_slug=course.url instance_slug=instance.url group_id=group.id %}">
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
             {% trans "Remove" %}
           </a>
