--- a/course/templates/course/staff/participants.html
+++ b/course/templates/course/staff/participants.html
@@ -16,7 +16,7 @@
 
     {% if is_teacher %}
     <p>
-      <a class="btn btn-primary btn-sm" href="{{ instance|url:'enroll-students' }}">
+      <a class="aplus-button--secondary aplus-button--sm" role="button" href="{{ instance|url:'enroll-students' }}">
         <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
           {% trans "Enroll students" %}
       </a>
