--- a/edit_course/templates/edit_course/batch_assess.html
+++ b/edit_course/templates/edit_course/batch_assess.html
@@ -81,7 +81,7 @@
             <div class="form-group">
                 <textarea name="submissions_json" style="width:100%;height:10em;"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="aplus-button--default aplus-button--md">
                 {% trans "Submit" %}
             </button>
         </form>
