--- a/edit_course/templates/edit_course/clone_instance.html
+++ b/edit_course/templates/edit_course/clone_instance.html
@@ -46,7 +46,7 @@
         {% endblocktrans %}
     </p>
     {{ form|bootstrap }}
-    <button type="submit" class="btn btn-warning">
+    <button type="submit" class="aplus-button--secondary aplus-button--md">
         {% trans "Clone into new instance" %}
     </button>
     <div class="hide progress">
