--- a/edit_course/templates/edit_course/edit_index.html
+++ b/edit_course/templates/edit_course/edit_index.html
@@ -16,7 +16,7 @@
     {% csrf_token %}
     <legend>{% trans "Edit course index" %}</legend>
     {{ form|bootstrap }}
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" class="aplus-button--default aplus-button--md">
         {% trans "Save" %}
     </button>
 </form>
