--- a/edit_course/templates/edit_course/edit_instance.html
+++ b/edit_course/templates/edit_course/edit_instance.html
@@ -25,7 +25,7 @@
         <label>{% trans "Teachers" %}</label>
         {% profiles course.teachers.all instance is_teacher %}</p>
     </div>
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" class="aplus-button--default aplus-button--md">
         {% trans "Save" %}
     </button>
 </form>
