--- a/edit_course/templates/edit_course/edit_model.html
+++ b/edit_course/templates/edit_course/edit_model.html
@@ -63,8 +63,8 @@
     {% endfor %}
     <div class="form-group">
         <div class="col-sm-10 col-sm-offset-2">
-            <button type="submit" class="btn btn-primary">{% trans 'Submit' %}</button>
-            <a class="btn btn-default" href="{{ instance|url:'course-edit' }}">
+            <button type="submit" class="aplus-button--default aplus-button--md">{% trans 'Submit' %}</button>
+            <a class="aplus-button--secondary aplus-button--md" href="{{ instance|url:'course-edit' }}" role="button">
                 {% trans 'Cancel' %}
             </a>
         </div>
