--- a/templates/base.html
+++ b/templates/base.html
@@ -223,7 +223,7 @@
                     </div>
                     <div class="modal-body"></div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">
+                      <button type="button" class="aplus-button--secondary aplus-button--md" data-dismiss="modal">
                         {% trans "Close" %}
                       </button>
                     </div>
