--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -22,7 +22,7 @@
     <div class="col-sm">
 			<div class="dropdown h4">
 				<input type="image" src="{% static 'images/uls.svg' %}" alt="{% trans 'Language' %}"
-				class="btn btn-xs" id="lang-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" />
+				class="aplus-button--secondary aplus-button--xs" id="lang-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" />
 				<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="lang-dropdown">
 					{% for language in instance.language|list_unselected %}
 					<li>
