--- a/course/templates/course/_enroll_form.html
+++ b/course/templates/course/_enroll_form.html
@@ -12,7 +12,7 @@
 				{% else %}
 					{% trans "In order to submit exercises and see material, you must enroll in the course." %}
 				{% endif %}
-				<input type="submit" value="{% trans 'Enroll' %}" class="btn btn-info">
+				<input type="submit" value="{% trans 'Enroll' %}" class="aplus-button--default aplus-button--md">
 				{% if instance.enrollment_ending_time %}
 					<div>
 						<small>
