--- a/course/templates/course/groups.html
+++ b/course/templates/course/groups.html
@@ -35,7 +35,7 @@
       {% endblocktrans %}
     </p>
     {{ form|bootstrap_horizontal }}
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" class="aplus-button--default aplus-button--md">
         {% trans "Form a new group" %}
     </button>
   </form>
