--- a/course/templates/course/staff/enroll_students.html
+++ b/course/templates/course/staff/enroll_students.html
@@ -26,7 +26,7 @@
     {% csrf_token %}
     <legend>{% trans "Enroll students in the course" %}</legend>
     {{ form|bootstrap }}
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" class="aplus-button--default aplus-button--md">
       {% trans "Enroll students" %}
     </button>
   </form>
