--- a/course/templates/course/staff/group_edit.html
+++ b/course/templates/course/staff/group_edit.html
@@ -24,7 +24,7 @@
       {% csrf_token %}
       <legend>{% trans "Edit group members" %}</legend>
       {{ form|bootstrap }}
-      <button type="submit" class="btn btn-primary">
+      <button type="submit" class="aplus-button--default aplus-button--md">
           {% trans "Save" %}
       </button>
   </form>
