--- a/deviations/templates/deviations/list_dl.html
+++ b/deviations/templates/deviations/list_dl.html
@@ -13,7 +13,7 @@
 {% block coursecontent %}
 <br />
 <p>
-	<a class="btn btn-primary btn-xs" href="{{ instance|url:'deviations-add-dl' }}">
+	<a class="aplus-button--default aplus-button--xs" role="button" href="{{ instance|url:'deviations-add-dl' }}">
 		<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
 		{% trans "Add new deadline deviations" %}
 	</a>
@@ -39,7 +39,7 @@
 			<td>
 				<form method="post" action="{{ deviation|url:'deviations-remove-dl' }}">
 					{% csrf_token %}
-					<button type="submit" class="btn btn-default btn-xs">
+					<button type="submit" class="aplus-button--danger aplus-button--xs">
 						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 						{% trans 'Remove' %}
 					</button>
