--- a/edit_course/templates/edit_course/usertag_add.html
+++ b/edit_course/templates/edit_course/usertag_add.html
@@ -19,8 +19,8 @@
 	{{ form|bootstrap_horizontal }}
 	<div class="form-group">
 		<div class="col-sm-10 col-sm-offset-2">
-			<button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
-			<a href="{{ instance|url:'course-tags' }}" class="btn btn-default">{% trans "Cancel" %}</a>
+			<button type="submit" class="aplus-button--default aplus-button--md">{% trans 'Save' %}</button>
+			<a href="{{ instance|url:'course-tags' }}" class="aplus-button--secondary aplus-button--md" role="button">{% trans "Cancel" %}</a>
 		</div>
 	</div>
 </form>
