--- a/edit_course/templates/edit_course/usertag_delete.html
+++ b/edit_course/templates/edit_course/usertag_delete.html
@@ -26,8 +26,8 @@
 	</div>
 
 	<div class="form-group">
-		<input class="btn btn-danger" type="submit" value="{% trans 'Remove' %}" />
-		<a class="btn btn-default" href="{{ instance|url:'course-tags' }}">
+		<input class="aplus-button--danger aplus-button--md" type="submit" value="{% trans 'Remove' %}" />
+		<a class="aplus-button--secondary aplus-button--md" role="button" href="{{ instance|url:'course-tags' }}">
 			{% trans "Cancel" %}
 		</a>
 	</div>
