--- a/edit_course/templates/edit_course/usertagging_add.html
+++ b/edit_course/templates/edit_course/usertagging_add.html
@@ -24,8 +24,8 @@
 	{{ form|bootstrap_horizontal }}
 	<div class="form-group">
 		<div class="col-sm-10 col-sm-offset-2">
-			<button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
-			<a href="{{ instance|url:'course-tags' }}" class="btn btn-default">{% trans "Cancel" %}</a>
+			<button type="submit" class="aplus-button--default aplus-button--md">{% trans 'Save' %}</button>
+			<a href="{{ instance|url:'course-tags' }}" role="button" class="aplus-button--secondary aplus-button--md">{% trans "Cancel" %}</a>
 		</div>
 	</div>
 </form>
