--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -112,7 +112,7 @@
                             open it due to personal extensions. However, this saves some database queries.
                             {% endcomment %}
                             {% if exercise.model_answers %}
-                                <a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'exercise-model' }}">
+                                <a class="aplus-button--secondary aplus-button--xs page-modal" role="button" href="{{ exercise|url:'exercise-model' }}">
                                     <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
                                     {% trans "Show model answer" %}
                                 </a>
@@ -120,14 +120,14 @@
                         {% endif %}
                         {% if is_course_staff or is_student %}
                             {% if exercise.templates %}
-                                <a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'exercise-template' }}">
+                                <a class="aplus-button--secondary aplus-button--xs page-modal" role="button" href="{{ exercise|url:'exercise-template' }}">
                                     <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
                                     {% trans "Show exercise template" %}
                                 </a>
                             {% endif %}
                         {% endif %}
                         {% if is_course_staff %}
-                            <a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'submission-list' }}">
+                            <a class="aplus-button--secondary aplus-button--xs page-modal" role="button" href="{{ exercise|url:'submission-list' }}">
                                 <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
                                 {% trans "View all submissions" %}
                             </a>
