--- a/exercise/templates/exercise/staff/assess_submission.html
+++ b/exercise/templates/exercise/staff/assess_submission.html
@@ -24,8 +24,8 @@
             {% csrf_token %}
             {{ form|bootstrap }}
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
-                <a href="{{ submission|url:'submission-inspect' }}" class="btn btn-default">{% trans "Cancel" %}</a>
+                <button type="submit" class="aplus-button--default aplus-button--md">{% trans 'Save' %}</button>
+                <a href="{{ submission|url:'submission-inspect' }}" class="aplus-button--secondary aplus-button--md" role="button">{% trans "Cancel" %}</a>
             </div>
         </form>
     </div>
