--- a/exercise/templates/exercise/staff/edit_submitters.html
+++ b/exercise/templates/exercise/staff/edit_submitters.html
@@ -20,8 +20,8 @@
           {% csrf_token %}
           {{ form|bootstrap }}
           <div class="form-group">
-              <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
-              <a href="{{ submission|url:'submission-inspect' }}" class="btn btn-default">{% trans "Cancel" %}</a>
+              <button type="submit" class="aplus-button--default aplus-button--md">{% trans 'Save' %}</button>
+              <a href="{{ submission|url:'submission-inspect' }}" class="aplus-button--secondary aplus-button--md" role="button">{% trans "Cancel" %}</a>
           </div>
       </form>
       {% if groups %}
@@ -31,7 +31,7 @@
           {% for group in groups %}
           <tr>
             <td class="col-md-1">
-              <a href="#" class="btn btn-xs btn-primary select" data-profiles="{% for profile in group.members.all %}{{ profile.user.id }},{% endfor %}">
+              <a href="#" class="aplus-button--secondary aplus-button--xs select" role="button" data-profiles="{% for profile in group.members.all %}{{ profile.user.id }},{% endfor %}">
                 {% trans "Select" %}
               </a>
             </td>
