--- a/exercise/templates/exercise/submission_plain.html
+++ b/exercise/templates/exercise/submission_plain.html
@@ -29,7 +29,7 @@
 			<tr>
 				{% if not request.is_ajax %}
 				<th rowspan="2">
-					<a href="{{ submission.exercise|url:'exercise-plain' }}" class="btn btn-primary">
+					<a href="{{ submission.exercise|url:'exercise-plain' }}" class="aplus-button--secondary aplus-button--md" role="button">
 						{% trans "Return to exercise" %}
 					</a>
 				</th>
@@ -68,7 +68,7 @@
 				{% endif %}
 				{% if is_course_staff %}
 				<td>
-					<a href="{{ submission|url:'submission-inspect' }}" class="btn btn-default btn-xs">
+					<a href="{{ submission|url:'submission-inspect' }}" class="aplus-button--secondary aplus-button--md" role="button">
 						<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
 						{% trans "Inspect" %}
 					</a>
