--- a/external_services/templates/external_services/edit_menu.html
+++ b/external_services/templates/external_services/edit_menu.html
@@ -20,8 +20,8 @@
     {{ form|bootstrap_horizontal }}
     <div class="form-group">
         <div class="col-sm-10 col-sm-offset-2">
-            <button type="submit" class="btn btn-primary">{% trans 'Submit' %}</button>
-            <a href="{{ instance|url:'external-services-list-menu' }}" class="btn btn-default">{% trans "Cancel" %}</a>
+            <button type="submit" class="aplus-button--default aplus-button--md">{% trans 'Submit' %}</button>
+            <a href="{{ instance|url:'external-services-list-menu' }}" class="aplus-button--secondary aplus-button--md" role="button">{% trans "Cancel" %}</a>
         </div>
     </div>
 </form>
