--- a/external_services/templates/external_services/list_menu.html
+++ b/external_services/templates/external_services/list_menu.html
@@ -55,7 +55,7 @@
 			<small>{{ menu.access|menu_access }}</small>
 		</td>
 		<td>
-			<a href="{{ menu|url:'external-services-edit-menu' }}" class="btn btn-default btn-xs">
+			<a href="{{ menu|url:'external-services-edit-menu' }}" role="button" class="aplus-button--secondary aplus-button--xs">
 				<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 				{% trans 'Edit' %}
 			</a>
@@ -63,7 +63,7 @@
 		<td>
 			<form method="post" action="{{ menu|url:'external-services-remove-menu' }}">
 				{% csrf_token %}
-				<button type="submit" class="btn btn-danger btn-xs">
+				<button type="submit" class="aplus-button--danger aplus-button--xs">
 					<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 					{% trans 'Remove' %}
 				</button>
