--- a/news/templates/news/edit.html
+++ b/news/templates/news/edit.html
@@ -20,8 +20,8 @@
     {{ form|bootstrap_horizontal }}
     <div class="form-group">
         <div class="col-sm-10 col-sm-offset-2">
-            <button type="submit" class="btn btn-primary">{% trans 'Submit' %}</button>
-            <a href="{{ instance|url:'news-list' }}" class="btn btn-default">{% trans "Cancel" %}</a>
+            <button type="submit" class="aplus-button--default aplus-button--md">{% trans 'Submit' %}</button>
+            <a href="{{ instance|url:'news-list' }}" role="button" class="aplus-button--secondary aplus-button--md">{% trans "Cancel" %}</a>
         </div>
     </div>
 </form>
