--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -36,7 +36,7 @@
 			{{ item.title|safe }}
 		</td>
 		<td>
-			<a href="{{ item|url:'news-edit' }}" class="btn btn-default btn-xs">
+			<a href="{{ item|url:'news-edit' }}" role="button" class="aplus-button--secondary aplus-button--xs">
 				<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 				{% trans 'Edit' %}
 			</a>
@@ -44,7 +44,7 @@
 		<td>
 			<form method="post" action="{{ item|url:'news-remove' }}">
 				{% csrf_token %}
-				<button type="submit" class="btn btn-danger btn-xs">
+				<button type="submit" class="aplus-button--danger aplus-button--xs">
 					<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 					{% trans 'Remove' %}
 				</button>
@@ -55,7 +55,7 @@
 </table>
 <br />
 <p>
-	<a class="btn btn-primary btn-xs" href="{{ instance|url:'news-add' }}">
+	<a class="aplus-button--default aplus-button--sm" href="{{ instance|url:'news-add' }}">
 		<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 		{% trans "Add news item" %}
 	</a>
