--- a/course/templates/course/_siblings.html
+++ b/course/templates/course/_siblings.html
@@ -11,11 +11,11 @@
     {% endif %}
     {% if accessible %}
     <a href="{{ next.link }}" class="pull-right">
-        {{ next.name|parse_localization }} &raquo;
+        {{ next.name|parse_localization }} <span aria-hidden="true">&raquo;</span>
     </a>
     {% else %}
     <span class="pull-right disabled">
-        {{ next.name|parse_localization }} &raquo;
+        {{ next.name|parse_localization }} <span aria-hidden="true">&raquo;</span>
         {% if is_course_staff %}
         <a href="{{ next.link }}">
             <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
@@ -34,11 +34,11 @@
     {% endif %}
     {% if accessible %}
     <a href="{{ previous.link }}" class="pull-left">
-        &laquo; {{ previous.name|parse_localization }}
+        <span aria-hidden="true">&laquo;</span> {{ previous.name|parse_localization }}
     </a>
     {% else %}
     <span class="pull-left disabled">
-        &laquo; {{ previous.name|parse_localization }}
+        <span aria-hidden="true">&laquo;</span> {{ previous.name|parse_localization }}
         {% if is_course_staff %}
         <a href="{{ previous.link }}">
             <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
