Add teacher disclaimer to accessibility statement
Markku wrote the Finnish version.

Co-authored-by: Markku Riekkinen <markku.riekkinen@aalto.fi>

--- a/templates/accessibility_issues_en.html
+++ b/templates/accessibility_issues_en.html
@@ -1,4 +1,5 @@
 <h2>Known Issues</h2>
+<p>This information concerns the A+ platform, as it is provided. Institutions using A+, as well as creators of course content (teachers) are free to customise their content and styles, which may change the compliance described here.</p>
 <p>At present, A+ partly complies with the defined requirements for accessibility. Further improvements are needed, especially:</p>
 <ul>
 	<li>Some elements of the service are not keyboard accessible.</li>
