--- a/templates/accessibility_issues_fi.html
+++ b/templates/accessibility_issues_fi.html
@@ -1,4 +1,5 @@
 <h2>Tunnetut ongelmat</h2>
+<p>Tämän sivun tiedot koskevat A+-alustaa sellaisena kuin se tarjotaan. A+-alustaa käyttävät instituutiot kuten myös kurssisisällön tuottajat (opettajat) kykenevät vapaasti muokkaamaan sisältöään ja sen ulkoasua, mikä voi muuttaa tässä kuvattua saavutettavuusvaatimusten noudattamista.</p>
 <p>Nykytilanteessa A+ täyttää osittain saavutettavuusvaatimukset. Lisäparannuksia vaaditaan, erityisesti seuraavissa toiminnallisuuksissa:</p>
 <ul>
 	<li>Joihinkin palvelun osiin ei pääse pelkällä näppäimistöllä.</li>
