Increase font size and change default fonts.
Increase the font size to provide a  more inclusive and accessible
content.
The new fonts are replaced with a "native font stack" just as it was
done in Bootstrap 4.
https://getbootstrap.com/docs/4.5/content/reboot/#native-font-stack

Fixes #609

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -18,6 +18,14 @@ $brand-info: $aplus-info;
 $brand-warning: $aplus-warning;
 $brand-danger: $aplus-danger;
 
+// Import new font variables
+@import 'variables/typography';
+$font-family-sans-serif: $aplus-font-family-sans-serif;
+$font-family-serif: $aplus-font-family-serif;
+$font-family-monospace: $aplus-font-family-monospace;
+$font-family-base: $aplus-font-family-base;
+$font-size-base:  $aplus-font-size-base;
+
 @import 'vendor/bootstrap3';
 
 /*!
