Solve accessibility issues on the login page.
Fixes #629

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -49,4 +49,5 @@ $font-size-base:  $aplus-font-size-base;
 @import 'components/frontpage-cards';
 @import 'components/menu-notification';
 @import 'pages/profile-page';
+@import 'pages/login';
 @import 'protocols/quiz1';
