--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% load bootstrap %}
 
-{% block title %}{% trans "Login" %} | {{ block.super }}{% endblock %}
+{% block title %}{% trans "Log in to A+" %} | {{ block.super }}{% endblock %}
 
 {% block scripts %}
 	{{ block.super }}
@@ -14,63 +14,65 @@
 {% block content %}
 
 	<div class="page-header">
-		<h1>{% trans "Login" %}</h1>
+		<h1>{% trans "Log in to A+" %}</h1>
 	</div>
 
 	<div id="login-box-row" class="row">
 
 		{% if shibboleth_login %}
-			<div class="col-sm-6 col-md-3 login-box">
-				<div class="thumbnail">
-					<div class="caption">
-						{% if shibboleth_title_text %}
-							<h3>
-								{{ shibboleth_title_text|safe }}
-							</h3>
-						{% endif %}
+			<section aria-labelledby="login-shibboleth-users" class="col-sm-6 col-md-3 login-box">
+				<div class="login-section">
+					{% if shibboleth_title_text %}
+						<h2 id="login-shibboleth-users">
+							{{ shibboleth_title_text|safe }}
+						</h2>
+					{% endif %}
+					<div class="login-section-body">
 						{% if shibboleth_body_text %}
 							<p>
 								{{ shibboleth_body_text|safe }}
 							</p>
 						{% endif %}
 						<p>
-							<a class="aplus-button--secondary aplus-button--lg" role="button" href="{% url 'shibboleth-login' %}?next={{ next|iriencode }}">
+							<a class="aplus-button--secondary aplus-button--lg" role="button"
+								href="{% url 'shibboleth-login' %}?next={{ next|iriencode }}">
 								{{ shibboleth_button_text|safe }}
 							</a>
 						</p>
 					</div>
 				</div>
-			</div>
+			</section>
 		{% endif %}
 
 		{% if mooc_login %}
-			<div class="col-sm-6 col-md-3 login-box">
-				<div class="thumbnail">
-					<div class="caption">
-						{% if mooc_title_text %}
-							<h3>
-								{{ mooc_title_text|safe }}
-							</h3>
-						{% endif %}
+			<section aria-labelledby="login-google-users" class="col-sm-6 col-md-3 login-box">
+				<div class="login-section">
+					{% if mooc_title_text %}
+						<h2 id="login-google-users">
+							{{ mooc_title_text|safe }}
+						</h2>
+					{% endif %}
+					<div class="login-section-body">
 						{% if mooc_body_text %}
 							<p>
 								{{ mooc_body_text|safe }}
 							</p>
 						{% endif %}
 						<p>
-							<a class="aplus-button--secondary aplus-button--lg" role="button" href="{% url 'social:begin' 'google-oauth2' %}?next={{ next|iriencode }}">{% trans 'Log in using Google' %}</a>
+							<a class="aplus-button--secondary aplus-button--lg" role="button"
+								href="{% url 'social:begin' 'google-oauth2' %}?next={{ next|iriencode }}">{% trans 'Log in using Google' %}</a>
 						</p>
 					</div>
 				</div>
-			</div>
+			</section>
 		{% endif %}
 
-		<div class="col-sm-6 col-md-3 login-box extra-login">
-			<div class="thumbnail">
-				<div class="caption">
-					<h3>
-						{% trans "Local users" %}
-					</h3>
+		<section aria-labelledby="login-local-users" class="col-sm-6 col-md-3 login-box extra-login">
+			<div class="login-section">
+				<h2 id="login-local-users">
+					{% trans "Local users" %}
+				</h2>
+				<div class="login-section-body">
 					<p>
 						{% blocktrans trimmed %}
 							If you have been provided with credentials specifically
@@ -79,14 +81,40 @@
 					</p>
 					<form method="post" role="form">
 						{% csrf_token %}
-						{{ form|bootstrap }}
+						{% if form.non_field_errors %}
+							<div class="alert alert-danger">
+								<a class="close" aria-label="{% trans 'Close error list' %}" data-dismiss="alert">×</a>
+									{% for error in form.non_field_errors %}
+										<p>{{ error }}</p>
+									{% endfor %}
+							</div>
+						{% endif %}
+							<div class="form-group{% if form.username.errors %} has-error{% endif %}">
+								<label class="control-label"
+								for="{{ form.username.id_for_label }}">{% trans 'Username' %}</label>
+								<input class="form-control" id="{{ form.username.id_for_label }}" type="text"
+								name="{{ form.username.html_name }}" required autocomplete="username" />
+								{% for error in form.username.errors %}
+									<span class="help-block">{{ error }}</span>
+								{% endfor %}
+							</div>
+							<div class="form-group{% if form.password.errors %} has-error{% endif %}">
+								<label class="control-label"
+								for="{{ form.password.id_for_label }}">{% trans 'Password' %}</label>
+								<input class="form-control" id="{{ form.password.id_for_label }}" type="password"
+								name="{{ form.password.html_name }}" required autocomplete="current-password" />
+									{% for error in form.password.errors %}
+										<span class="help-block">{{ error }}</span>
+									{% endfor %}
+							</div>
 						<div class="form-group">
-							<button type="submit" class="aplus-button--secondary aplus-button--lg">{% trans "Log in" %}</button>
+							<button type="submit"
+								class="aplus-button--secondary aplus-button--lg">{% trans "Log in" %}</button>
 						</div>
 					</form>
 				</div>
 			</div>
-		</div>
+		</section>
 
 		<div class="col-sm-1">
 			<button class="btn btn-default show-extra-login-btn"
