Split the header, footer and menu-notifications into partials
The SCSS code related to the `header`, `footer`, and `menu-notifications` are
completely migrated to partials.

This commit also fix the following accessibility issues:
* The `background-colour` poperty of the `topbar` is modified by
  removing the applied colour gradient and using the base colour of the
  application instead.
* The contras of the page footer text is improved.

Fixes #628

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -41,9 +41,12 @@ $font-size-base:  $aplus-font-size-base;
 /*!
  * A+ Styles
  */
+@import 'layout/header';
+@import 'layout/footer';
 @import 'components/button';
 @import 'components/error_summary';
 @import 'components/focus';
 @import 'components/frontpage-cards';
+@import 'components/menu-notification';
 @import 'pages/profile-page';
 @import 'protocols/quiz1';
